fixed form styling on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -178,6 +178,12 @@ input:focus, textarea:focus {
 
 @media (max-width: 768px) {
   #messages-box {
-    min-height: 640px;
+    min-height: 638px;
+  }
+}
+
+@media (max-width: 480px) {
+  #messages-box {
+    min-height: 650px;
   }
 }
